--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,14 @@ header {
     padding-left: 20px;
     padding-right: 60px;
     font-weight: bold;
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+}
+
+#siteName img {
+    width: 4.5em; /* Adjust logo size */
+    height: auto;
 }
 
 #desktop-menu {
