--- a/styles.css
+++ b/styles.css
@@ -223,3 +223,52 @@ html {
 #carousel-right:hover {
     background: rgba(166, 124, 82, 0.8); /* Slightly lighter brown with transparency for hover effect */
 }
+
+/* Sekce about rozdělena na 3x3 grid, top v levém horním rohu, bottom ve spodní třetině */
+#about {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    min-height: 400px;
+    position: relative;
+    background-image: url('images/ja_nirvan.jpg');
+    background-size: cover;
+    background-position: top center;
+    background-repeat: no-repeat;
+    color: #fff;
+    padding: 2em;
+}
+
+#top {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    align-self: start;
+    justify-self: start;
+    background: rgba(0,0,0,0.5);
+    padding: 1em;
+    border-radius: 0.5em;
+    max-width: 90%;
+}
+
+#bottom {
+    grid-row: 3 / 4;
+    grid-column: 1 / 4;
+    align-self: end;
+    justify-self: stretch;
+    background: rgba(0,0,0,0.5);
+    padding: 1em;
+    border-radius: 0.5em;
+    max-width: 100%;
+}
+
+@media (max-width: 600px) {
+    #about {
+        min-height: 250px;
+        padding: 1em;
+    }
+
+    #top, #bottom {
+        max-width: 100%;
+        padding: 0.5em;
+    }
+}
